# measure-detector

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  entrypoint.sh  pyproject.toml
src/: server.py  util.py
